--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
     <div class="buttons-block">
       <button data-link="Adress.html">Адрес</button>
-      <button onclick="window.open('https://wa.me/Ваш_номер_без_плюса', '_blank')">Записаться</button>
+      <button onclick="window.open('https://wa.me/89539186571', '_blank')">Записаться</button>
     </div>
 
     <div class="works-block">
