--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
   <div class="container">
     <div class="top-block">
-      Калористка — Анна
+      Колористка — Анна
     </div>
 
     <div class="buttons-block">
