--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Колористка Анна</title>
+  <title>Анна Власова</title>
   <style>
     body {
       margin: 0;
@@ -147,7 +147,7 @@
 
   <div class="container">
     <div class="top-block">
-      Колористка — Анна
+      Анна Власова
     </div>
 
     <div class="buttons-block">
